<resources>
    <string name="app_name">spotify-wrapped</string>
    <string name="spotify">Spotify</string>
    <string name="login">Log In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signup">SIGN UP FREE</string>
    <string name="request_token">Request Token</string>
    <string name="request_code">Request Code</string>
    <string name="get_user_profile">Get User Profile</string>
    <string name="get_user_tracks">Get Most Listened Tracks</string>
    <string name="logout_user">Log out</string>
    <string name="get_user_genres">Get Top Genres</string>
    <string name="user_signup">User Signup</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="email_address">Spotify Email Address</string>
    <string name="spotify_logo">spotify logo</string>
    <string name="account_settings">Account Settings</string>
    <string name="edit">Edit</string>
    <string name="delete_account">Delete Account</string>
    <string name="let_s_go">Let\'s Go!</string>
    <string name="view_your">View your</string>
    <string name="spotify_wrapped">Spotify wrapped</string>
    <string name="tap_the_screen_to_continue">Tap the screen to continue</string>
    <string name="welcome_user_name">Welcome user_name!</string>
    <string name="wrapped">wrapped</string>
    <string name="what_your_top_5_says_about_you">What your Top 5 says about you:</string>
    <string name="export_page">Export Page</string>
    <string name="settings_button">Settings Button</string>
    <string name="home_button">Home Button</string>
</resources>