<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/token_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            tools:text="Token:" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/token_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/rounded_button"
            android:textColor="@color/white"
            android:text="@string/request_token" />

        <TextView
            android:id="@+id/code_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            tools:text="Code:" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/code_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/rounded_button"
            android:textColor="@color/white"
            android:text="@string/request_code" />

        <TextView
            android:id="@+id/response_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            tools:text="Line 1\nLine 2\nLine 3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/profile_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:textColor="@color/white"
                android:text="@string/get_user_profile" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>