<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="16dp">

    <TextView
        android:id="@+id/account_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/account_settings"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/currentEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <!-- Line 2: Email -->
    <EditText
        android:id="@+id/currentEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Current Email"
        android:textColor="@color/white"
        android:layout_margin="3dp"
        app:layout_constraintBottom_toTopOf="@+id/currentPassword"
        app:layout_constraintEnd_toStartOf="@+id/editEmailButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_settings"
    />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/editEmailButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:background="@drawable/edit_button"
        android:textColor="@color/white"
        android:layout_margin="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/currentEmail"
        app:layout_constraintBottom_toTopOf="@+id/editPasswordButton"
        app:layout_constraintTop_toBottomOf="@+id/account_settings"
        />

    <!-- Line 3: Password -->
    <EditText
        android:id="@+id/currentPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Current Password"
        android:textColor="@color/white"
        android:layout_margin="3dp"
        app:layout_constraintEnd_toStartOf="@+id/editPasswordButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentEmail"
        app:layout_constraintBottom_toTopOf="@+id/deleteAccountButton"
        android:inputType="textPassword"
    />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/editPasswordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:background="@drawable/edit_button"
        android:textColor="@color/white"
        android:layout_margin="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/currentPassword"
        app:layout_constraintTop_toBottomOf="@+id/editEmailButton"
        app:layout_constraintBottom_toTopOf="@+id/deleteAccountButton"
        />

    <!-- Delete Account Button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/deleteAccountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/delete_account"
        android:background="@drawable/rounded_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentPassword"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>